@@ -1,21 +1,20 @@
 package com.insidious.plugin.ui.stomp;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.insidious.plugin.InsidiousNotification;
 import com.insidious.plugin.adapter.MethodAdapter;
 import com.insidious.plugin.adapter.java.JavaMethodAdapter;
-import com.insidious.plugin.agent.AgentCommandResponse;
 import com.insidious.plugin.agent.ResponseType;
-import com.insidious.plugin.callbacks.CandidateLifeListener;
 import com.insidious.plugin.callbacks.ExecutionRequestSourceType;
 import com.insidious.plugin.callbacks.TestCandidateLifeListener;
 import com.insidious.plugin.client.ScanProgress;
+import com.insidious.plugin.client.SessionInstanceInterface;
 import com.insidious.plugin.client.SessionScanEventListener;
 import com.insidious.plugin.factory.InsidiousConfigurationState;
 import com.insidious.plugin.factory.InsidiousService;
+import com.insidious.plugin.factory.SemanticVersion;
+import com.insidious.plugin.factory.UsageInsightTracker;
 import com.insidious.plugin.factory.testcase.TestCaseService;
 import com.insidious.plugin.factory.testcase.candidate.TestCandidateMetadata;
-import com.insidious.plugin.mocking.*;
 import com.insidious.plugin.pojo.*;
 import com.insidious.plugin.pojo.atomic.ClassUnderTest;
 import com.insidious.plugin.pojo.atomic.MethodUnderTest;
@@ -23,87 +22,120 @@ import com.insidious.plugin.pojo.atomic.StoredCandidate;
 import com.insidious.plugin.pojo.frameworks.JsonFramework;
 import com.insidious.plugin.pojo.frameworks.MockFramework;
 import com.insidious.plugin.pojo.frameworks.TestFramework;
-import com.insidious.plugin.record.AtomicRecordService;
 import com.insidious.plugin.ui.TestCaseGenerationConfiguration;
-import com.insidious.plugin.ui.assertions.SaveForm;
 import com.insidious.plugin.ui.methodscope.AgentCommandResponseListener;
+import com.insidious.plugin.ui.methodscope.ComponentLifecycleListener;
+import com.insidious.plugin.ui.methodscope.ComponentProvider;
 import com.insidious.plugin.ui.methodscope.MethodDirectInvokeComponent;
-import com.insidious.plugin.ui.methodscope.OnCloseListener;
+import com.insidious.plugin.upload.ExecutionSessionSource;
+import com.insidious.plugin.util.ClassTypeUtils;
 import com.insidious.plugin.util.LoggerUtil;
 import com.insidious.plugin.util.UIUtils;
-import com.intellij.lang.jvm.JvmMethod;
+import com.intellij.icons.AllIcons;
+import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationType;
+import com.intellij.notification.Notifications;
+import com.intellij.openapi.Disposable;
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.DefaultActionGroup;
+import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.progress.ProcessCanceledException;
+import com.intellij.openapi.progress.ProgressIndicator;
+import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.ui.popup.ActiveIcon;
-import com.intellij.openapi.ui.popup.ComponentPopupBuilder;
-import com.intellij.openapi.ui.popup.JBPopupFactory;
+import com.intellij.openapi.ui.popup.*;
 import com.intellij.openapi.util.Computable;
-import com.intellij.psi.JavaPsiFacade;
-import com.intellij.psi.PsiClass;
+import com.intellij.openapi.util.Pair;
 import com.intellij.psi.PsiMethod;
-import com.intellij.psi.search.GlobalSearchScope;
+import com.intellij.psi.PsiSubstitutor;
+import com.intellij.ui.GotItTooltip;
 import com.intellij.ui.JBColor;
 import com.intellij.ui.awt.RelativePoint;
 import com.intellij.util.ui.JBUI;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.json.JSONObject;
 
 import javax.swing.*;
 import java.awt.*;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.sql.SQLException;
 import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.List;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 
-public class StompComponent implements Consumer<TestCandidateMetadata>, TestCandidateLifeListener, OnCloseListener, OnExpandListener {
-    public static final int component_height = 93;
+public class StompComponent implements
+        Consumer<List<TestCandidateBareBone>>,
+        TestCandidateLifeListener,
+        ComponentLifecycleListener<MethodDirectInvokeComponent>,
+        Runnable, Disposable, ComponentProvider {
+    public static final int COMPONENT_HEIGHT = 93;
+    public static final int MAX_ITEM_TO_DISPLAY = 50;
     private static final Logger logger = LoggerUtil.getInstance(StompComponent.class);
     private final InsidiousService insidiousService;
     private final JPanel itemPanel;
     private final StompStatusComponent stompStatusComponent;
-    private final List<TestCandidateMetadata> selectedCandidates = new ArrayList<>();
+    private final List<TestCandidateBareBone> selectedCandidates = new ArrayList<>();
     private final List<StompItem> stompItems = new ArrayList<>(500);
     private final SessionScanEventListener scanEventListener;
     private final SimpleDateFormat dateFormat;
-    private final Map<TestCandidateMetadata, Component> candidateMetadataStompItemMap = new HashMap<>();
+    private final Map<TestCandidateBareBone, Component> candidateMetadataStompItemMap = new HashMap<>();
+    private final InsidiousConfigurationState configurationState;
+    private final StompFilterModel stompFilterModel;
+    private final Set<Long> pinnedItems = new HashSet<>();
+    private final ActionToolbarImpl actionToolbar;
+    private final Map<String, AtomicInteger> countByMethodName = new HashMap<>();
+    private final AnAction filterAction;
+    private final Project project;
+    BlockingQueue<TestCandidateBareBone> incomingQueue = new ArrayBlockingQueue<>(100);
+    int totalAcceptedCount = 0;
     private JPanel mainPanel;
     private JPanel northPanelContainer;
     private JScrollPane historyStreamScrollPanel;
     private JPanel scrollContainer;
-    private JLabel reloadButton;
-    private JLabel filterButton;
-    private JButton saveReplayButton;
-    private JLabel replayButton;
-    private JLabel saveAsMockButton;
-    private JLabel generateJUnitButton;
+    //    private JLabel reloadButton;
+//    private JButton saveReplayButton;
+    //    private JLabel replayButton;
+//    private JLabel generateJUnitButton;
     private JPanel controlPanel;
     private JPanel infoPanel;
     private JLabel selectedCountLabel;
-    private JLabel selectAllLabel;
     private JLabel clearSelectionLabel;
-    private JPanel welcomePanel;
-    private JLabel manenDependencyIdentifierLabel;
+    private JLabel clearFilterLabel;
+    private JLabel filterAppliedLabel;
+    private JPanel actionToolbarContainer;
+    private JPanel timelineControlPanel;
+    private JPanel topContainerPanel;
+    private JLabel sourceLabelFilter;
     private long lastEventId = 0;
-    private ConnectedAndWaiting connectedAndWaiting;
-    private DisconnectedAnd disconnectedAnd;
-    private MethodDirectInvokeComponent directInvokeComponent = null;
-    private JPanel directInvokeRow = null;
-    private SaveForm saveFormReference;
-    private SimpleDateFormat simpleDateFormat = new SimpleDateFormat();
+    private TestCandidateSaveForm saveFormReference;
     private boolean welcomePanelRemoved = false;
+    private AtomicInteger candidateQueryLatch;
+    private MethodUnderTest lastMethodFocussed;
+    private boolean shownGotItNofiticaton = false;
+    private SessionInstanceInterface sessionInstance;
+    private boolean hasShownVersionWarning;
+    private MethodAdapter methodAdapter;
+    private boolean isShowingRouter = false;
 
     public StompComponent(InsidiousService insidiousService) {
         this.insidiousService = insidiousService;
+        this.project = insidiousService.getProject();
+        configurationState = project.getService(InsidiousConfigurationState.class);
+//        hideBottomSplit();
+//        filterAppliedLabel.setVisible(false);
+        stompFilterModel = configurationState.getFilterModel();
+
 
         itemPanel = new JPanel();
         GridBagLayout mgr = new GridBagLayout();
@@ -111,34 +143,165 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         itemPanel.setAlignmentY(0);
         itemPanel.setAlignmentX(0);
 
-        setLabelsVisible(false);
-
         itemPanel.add(new JPanel(), createGBCForFakeComponent());
 
         itemPanel.setBorder(BorderFactory.createEmptyBorder(8, 8, 0, 0));
 
 
         historyStreamScrollPanel.setViewportView(itemPanel);
+        itemPanel.setDoubleBuffered(true);
         historyStreamScrollPanel.setBorder(BorderFactory.createEmptyBorder());
-        historyStreamScrollPanel.setVisible(false);
+        JScrollBar verticalScrollBar = historyStreamScrollPanel.getVerticalScrollBar();
+        verticalScrollBar.setUnitIncrement(16); // Adjust as needed
 
         scrollContainer.setBorder(BorderFactory.createEmptyBorder());
 
+        AnAction saveAction = new AnAction(() -> "Save", AllIcons.Actions.MenuSaveall) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                DumbService.getInstance(project).runWhenSmart(() -> {
+                    JSONObject eventProperties = new JSONObject();
+                    eventProperties.put("count", selectedCandidates.size());
+                    UsageInsightTracker.getInstance().RecordEvent("ACTION_SAVE", eventProperties);
+                    saveSelected();
+                });
+            }
 
-        manenDependencyIdentifierLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        manenDependencyIdentifierLabel.addMouseListener(new MouseAdapter() {
+            @Override
+            public boolean displayTextInToolbar() {
+                return true;
+            }
+        };
+
+
+        AnAction generateJunitTestAction = new AnAction(() -> "JUnit", AllIcons.Scope.Tests) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                createJunitFromSelected();
+            }
+
+            @Override
+            public boolean displayTextInToolbar() {
+                return true;
+            }
+
+
+        };
+
+//        AnAction replaySelectionAction = new AnAction(() -> "Replay", AllIcons.Actions.RestartFrame) {
+//            @Override
+//            public void actionPerformed(@NotNull AnActionEvent e) {
+//                System.err.println("replay selected");
+//                if (selectedCandidates.size() < 1) {
+//                    InsidiousNotification.notifyMessage("Select records to replay", NotificationType.INFORMATION);
+//                    return;
+//                }
+//                JSONObject eventProperties = new JSONObject();
+//                eventProperties.put("count", selectedCandidates.size());
+//                UsageInsightTracker.getInstance().RecordEvent("ACTION_REPLAY_SELECT", eventProperties);
+//
+//                InsidiousNotification.notifyMessage("Replayed " + selectedCandidates.size() + " records",
+//                        NotificationType.INFORMATION);
+//                for (TestCandidateBareBone selectedCandidate : selectedCandidates) {
+//                    executeSingleTestCandidate(selectedCandidate);
+//                }
+//            }
+//
+//            @Override
+//            public boolean displayTextInToolbar() {
+//                return true;
+//            }
+//        };
+
+
+        sourceLabelFilter.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+        sourceLabelFilter.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent e) {
-                super.mouseClicked(e);
+                showFiltersComponentPopup(project, insidiousService, 1);
             }
         });
 
+        filterAction = new AnAction(() -> "Filter", AllIcons.General.Filter) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                JSONObject eventProperties = new JSONObject();
+                eventProperties.put("count", selectedCandidates.size());
+                UsageInsightTracker.getInstance().RecordEvent("ACTION_FILTER", eventProperties);
+
+                showFiltersComponentPopup(project, insidiousService, 0);
+            }
+
+            @Override
+            public boolean displayTextInToolbar() {
+                return true;
+            }
+        };
+
+
+        List<AnAction> action11 = List.of(
+                filterAction,
+//                replaySelectionAction,
+                generateJunitTestAction,
+                saveAction
+        );
+
+
+        actionToolbar = new ActionToolbarImpl(
+                "Live View", new DefaultActionGroup(action11), true);
+        actionToolbar.setMiniMode(false);
+        actionToolbar.setForceMinimumSize(true);
+        actionToolbar.setTargetComponent(mainPanel);
+
+
+        AnAction reloadAction = new AnAction(() -> "Reload", AllIcons.Actions.Refresh) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                System.err.println("reload timeline");
+                resetAndReload();
+            }
+        };
+
+        AnAction clearAction = new AnAction(() -> "Clear", AllIcons.Actions.GC) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                UsageInsightTracker.getInstance().RecordEvent("RESET_TIMELINE", null);
+                System.err.println("clear timeline");
+                resetTimeline();
+            }
+        };
+
+        AnAction selectAllAction = new AnAction(() -> "Select All", AllIcons.Actions.Selectall) {
+            @Override
+            public void actionPerformed(@NotNull AnActionEvent e) {
+                selectAll();
+            }
+        };
+
+
+        List<AnAction> action22 = List.of(
+                reloadAction,
+                clearAction,
+                selectAllAction
+        );
+
+
+        ActionToolbarImpl timelineToolbar = new ActionToolbarImpl(
+                "Timeline", new DefaultActionGroup(action22), true);
+        timelineToolbar.setMiniMode(false);
+        timelineToolbar.setForceMinimumSize(true);
+        timelineToolbar.setTargetComponent(mainPanel);
+
+        timelineControlPanel.add(timelineToolbar.getComponent(), BorderLayout.CENTER);
+
+
+        actionToolbarContainer.add(actionToolbar.getComponent(), BorderLayout.CENTER);
 
         clearSelectionLabel.setVisible(false);
-        selectAllLabel.setVisible(false);
-        selectAllLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
         clearSelectionLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
 
+        clearSelectionLabel.setBorder(BorderFactory.createEmptyBorder(2, 2, 2, 2));
+        clearSelectionLabel.setForeground(new Color(84, 138, 247));
         clearSelectionLabel.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent e) {
@@ -146,250 +309,38 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
                 for (StompItem stompItem : stompItems) {
                     stompItem.setSelected(false);
                 }
+                updateControlPanel();
             }
         });
 
-        selectAllLabel.addMouseListener(new MouseAdapter() {
+
+        clearFilterLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+        clearFilterLabel.addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent e) {
-                for (StompItem stompItem : stompItems) {
-                    stompItem.setSelected(true);
-                    selectedCandidates.add(stompItem.getTestCandidate());
-                }
-            }
-        });
+                JSONObject eventProperties = new JSONObject();
+                eventProperties.put("filter", stompFilterModel.toString());
+                UsageInsightTracker.getInstance().RecordEvent("CLEAR_FILTER", eventProperties);
 
-        replayButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        saveAsMockButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        generateJUnitButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        reloadButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        filterButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-
-        generateJUnitButton.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                for (TestCandidateMetadata selectedCandidate : selectedCandidates) {
-                    onGenerateJunitTestCaseRequest(selectedCandidate);
-                }
+                clearFilter();
+                updateFilterLabel();
+                resetAndReload();
 
             }
-        });
 
-        saveAsMockButton.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                super.mouseClicked(e);
-                for (TestCandidateMetadata selectedCandidate : selectedCandidates) {
-                    onSaveAsMockRequest(selectedCandidate);
-                }
-                InsidiousNotification.notifyMessage(selectedCandidates.size() + " new mock definitions saved are " +
-                        "available now", NotificationType.INFORMATION);
-
-            }
         });
 
 
-        reloadButton.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                {
-                    clear();
-                    loadNewCandidates();
-                    itemPanel.revalidate();
-                    itemPanel.repaint();
-                    historyStreamScrollPanel.revalidate();
-                    historyStreamScrollPanel.repaint();
-                }
-            }
-        });
-
-        saveReplayButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                if (saveFormReference != null) {
-                    insidiousService.hideCandidateSaveForm(saveFormReference);
-                    saveFormReference = null;
-                }
-                AtomicRecordService atomicRecordService = insidiousService.getProject()
-                        .getService(AtomicRecordService.class);
-                StoredCandidate storedCandidate = new StoredCandidate(selectedCandidates.get(0));
-
-                for (TestCandidateMetadata testCandidate : selectedCandidates) {
-                    MethodUnderTest methodUnderTest = null;
-                    try {
-                        methodUnderTest = ApplicationManager.getApplication().executeOnPooledThread(
-                                        () -> ApplicationManager.getApplication().runReadAction(
-                                                (Computable<MethodUnderTest>) () -> MethodUnderTest.fromMethodAdapter(
-                                                        new JavaMethodAdapter(getPsiMethod(testCandidate)))))
-                                .get();
-                    } catch (InterruptedException | ExecutionException ex) {
-                        continue;
-//                        throw new RuntimeException(ex);
-                    }
-                    StoredCandidate candidate = atomicRecordService
-                            .getStoredCandidateFor(methodUnderTest, testCandidate);
-                    if (candidate.getCandidateId() == null) {
-                        candidate.setCandidateId(UUID.randomUUID().toString());
-                    }
-                    candidate.setName("saved on " + simpleDateFormat.format(new Date()));
-                    atomicRecordService.saveCandidate(methodUnderTest, candidate);
-
-                }
-
-                InsidiousNotification.notifyMessage("Saved " + selectedCandidates.size() + " tests",
-                        NotificationType.INFORMATION);
-
-
-                if (storedCandidate.getCandidateId() == null) {
-                    // new test case
-                    storedCandidate.setName(
-                            "test " + storedCandidate.getMethod().getName() + " returns expected value when");
-                    storedCandidate.setDescription("assert that the response value matches expected value");
-                }
-                try {
-                    saveFormReference = new SaveForm(storedCandidate, new CandidateLifeListener() {
-                        @Override
-                        public void executeCandidate(List<StoredCandidate> metadata, ClassUnderTest classUnderTest, ReplayAllExecutionContext context, AgentCommandResponseListener<TestCandidateMetadata, String> stringAgentCommandResponseListener) {
-
-                        }
-
-                        @Override
-                        public void displayResponse(Component responseComponent, boolean isExceptionFlow) {
-
-                        }
-
-                        @Override
-                        public void onSaved(StoredCandidate storedCandidate) {
-                            for (TestCandidateMetadata testCandidate : selectedCandidates) {
-                                MethodUnderTest methodUnderTest = MethodUnderTest.fromMethodAdapter(
-                                        new JavaMethodAdapter(getPsiMethod(testCandidate)));
-                                StoredCandidate candidate = atomicRecordService.getStoredCandidateFor(methodUnderTest,
-                                        testCandidate);
-                                if (candidate.getCandidateId() == null) {
-                                    candidate.setCandidateId(UUID.randomUUID().toString());
-                                }
-                                candidate.setTestAssertions(storedCandidate.getTestAssertions());
-                                simpleDateFormat = new SimpleDateFormat();
-                                if (candidate.getName() == null) {
-                                    candidate.setName("saved on " + simpleDateFormat.format(new Date()));
-                                }
-                                atomicRecordService.saveCandidate(methodUnderTest, candidate);
-
-                            }
-
-                            insidiousService.hideCandidateSaveForm(saveFormReference);
-                            saveFormReference = null;
-
-
-                        }
-
-                        @Override
-                        public void onSaveRequest(StoredCandidate storedCandidate, AgentCommandResponse<String> agentCommandResponse) {
-
-                        }
-
-                        @Override
-                        public void onDeleteRequest(StoredCandidate storedCandidate) {
-
-                        }
-
-                        @Override
-                        public void onDeleted(StoredCandidate storedCandidate) {
-
-                        }
-
-                        @Override
-                        public void onUpdated(StoredCandidate storedCandidate) {
-
-                        }
-
-                        @Override
-                        public void onUpdateRequest(StoredCandidate storedCandidate) {
-
-                        }
-
-                        @Override
-                        public void onGenerateJunitTestCaseRequest(StoredCandidate storedCandidate) {
-
-                        }
-
-                        @Override
-                        public void onCandidateSelected(StoredCandidate testCandidateMetadata) {
-
-                        }
-
-                        @Override
-                        public boolean canGenerateUnitCase(StoredCandidate candidate) {
-                            return false;
-                        }
-
-                        @Override
-                        public void onCancel() {
-                            insidiousService.hideCandidateSaveForm(saveFormReference);
-                            saveFormReference = null;
-                        }
-
-                        @Override
-                        public Project getProject() {
-                            return insidiousService.getProject();
-                        }
-                    });
-                } catch (JsonProcessingException ex) {
-                    throw new RuntimeException(ex);
-                }
-
-                insidiousService.showCandidateSaveForm(saveFormReference);
-            }
-        });
-
-
-//        filterButton.setSize(new Dimension(98, 32));
-//        filterButton.setPreferredSize(new Dimension(98, 32));
-//        filterButton.setMinimumSize(new Dimension(98, 32));
-//        filterButton.setMaximumSize(new Dimension(98, 32));
-//        filterButton.setBorder(new RoundBtnBorder(15));
-//        Font font = filterButton.getFont();
-//        Font boldFont = font.deriveFont(Font.BOLD);
-//        filterButton.setFont(boldFont);
-
-
-        filterButton.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        filterButton.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-
-                StompFilter stompFilter = new StompFilter(new FilterModel());
-                ComponentPopupBuilder gutterMethodComponentPopup = JBPopupFactory.getInstance()
-                        .createComponentPopupBuilder(stompFilter.getComponent(), null);
-
-                gutterMethodComponentPopup
-                        .setProject(insidiousService.getProject())
-                        .setShowBorder(true)
-                        .setShowShadow(true)
-                        .setFocusable(true)
-                        .setRequestFocus(true)
-                        .setCancelOnClickOutside(true)
-                        .setCancelOnOtherWindowOpen(true)
-                        .setCancelKeyEnabled(true)
-                        .setBelongsToGlobalPopupStack(false)
-                        .setTitle("Filter")
-                        .setTitleIcon(new ActiveIcon(UIUtils.FILTER_LINE))
-                        .createPopup()
-                        .show(new RelativePoint(e));
-
-
-            }
-        });
-
-
-        ConnectedAndWaiting connectedAndWaiting = new ConnectedAndWaiting();
-        JPanel component = (JPanel) connectedAndWaiting.getComponent();
-        component.setAlignmentY(1.0f);
+//        ConnectedAndWaiting connectedAndWaiting = new ConnectedAndWaiting();
+//        JPanel component = (JPanel) connectedAndWaiting.getComponent();
+//        component.setAlignmentY(1.0f);
 
         scanEventListener = new SessionScanEventListener() {
             @Override
             public void started() {
+                logger.warn("setConnectedAndWaiting: " + StompComponent.this.hashCode());
                 lastEventId = 0;
+                setConnectedAndWaiting();
                 stompStatusComponent.addRightStatus("last-updated", "Last updated at " + simpleTime(new Date()));
             }
 
@@ -407,7 +358,8 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
             }
 
             @Override
-            public void ended() {
+            public synchronized void ended() {
+                disconnected();
                 stompStatusComponent.removeRightStatus("last-updated");
                 stompStatusComponent.removeRightStatus("scan-progress");
             }
@@ -422,45 +374,239 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         };
 
         dateFormat = new SimpleDateFormat("HH:mm:ss");
-        stompStatusComponent = new StompStatusComponent(insidiousService.getProject()
+        stompStatusComponent = new StompStatusComponent(project
                 .getService(InsidiousConfigurationState.class).getFilterModel());
         mainPanel.add(stompStatusComponent.getComponent(), BorderLayout.SOUTH);
 
 
-        replayButton.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                if (DumbService.getInstance(insidiousService.getProject()).isDumb()) {
-                    InsidiousNotification.notifyMessage("Please try after indexing is complete",
-                            NotificationType.WARNING);
-                    return;
-                }
+//        saveReplayButton.setEnabled(false);
+        updateFilterLabel();
 
-                for (TestCandidateMetadata selectedCandidate : selectedCandidates) {
-                    executeSingleTestCandidate(selectedCandidate);
-                }
-                InsidiousNotification.notifyMessage("Re-executed " + selectedCandidates.size() + " records",
-                        NotificationType.INFORMATION);
+    }
+
+
+    private void selectAll() {
+        if (selectedCandidates.size() != stompItems.size()) {
+            selectedCandidates.clear();
+            for (StompItem stompItem : stompItems) {
+                stompItem.setSelected(true);
+                selectedCandidates.add(stompItem.getTestCandidate());
             }
-        });
-
+        } else {
+            selectedCandidates.clear();
+            for (StompItem stompItem : stompItems) {
+                stompItem.setSelected(false);
+            }
+        }
+        updateControlPanel();
     }
 
-    private void setLabelsVisible(boolean b) {
-//        mockLabel.setVisible(b);
-//        executeLabel.setVisible(b);
-//        convertToJunitLabel.setVisible(b);
-    }
 
-    private void executeSingleTestCandidate(TestCandidateMetadata selectedCandidate) {
+    private void createJunitFromSelected() {
+        System.err.println("generate junit test");
+        if (selectedCandidates.isEmpty()) {
+            InsidiousNotification.notifyMessage("Select records to generate JUnit Test",
+                    NotificationType.INFORMATION);
+            return;
+        }
+
+        if (DumbService.getInstance(project).isDumb()) {
+            InsidiousNotification.notifyMessage("Please try after indexing is finished",
+                    NotificationType.INFORMATION);
+            return;
+        }
+
         ApplicationManager.getApplication().executeOnPooledThread(() -> {
-            PsiMethod methodPsiElement = ApplicationManager.getApplication().runReadAction(
-                    (Computable<PsiMethod>) () -> getPsiMethod(selectedCandidate));
+            JSONObject eventProperties = new JSONObject();
+            eventProperties.put("count", selectedCandidates.size());
+            UsageInsightTracker.getInstance().RecordEvent("ACTION_GENERATE_JUNIT", eventProperties);
+
+
+            ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
+                ProgressIndicator progressIndicator = ProgressManager.getInstance()
+                        .getProgressIndicator();//(project, "New project...");
+                progressIndicator.setIndeterminate(false);
+                progressIndicator.setFraction(0);
+                onGenerateJunitTestCaseRequest(selectedCandidates, new TestCaseGenerationConfiguration(
+                        TestFramework.JUnit5, MockFramework.Mockito, JsonFramework.Jackson,
+                        ResourceEmbedMode.IN_CODE
+                ));
+            }, "Generate JUnit Tests", true, project);
+
+
+        });
+    }
+
+    private void showFiltersComponentPopup(Project project, InsidiousService insidiousService, int selectedTabIndex) {
+        StompFilterModel originalFilter = new StompFilterModel(stompFilterModel);
+        StompFilter stompFilter = new StompFilter(insidiousService, stompFilterModel, lastMethodFocussed,
+                selectedTabIndex);
+        JComponent component = stompFilter.getComponent();
+
+        ComponentPopupBuilder gutterMethodComponentPopup = JBPopupFactory.getInstance()
+                .createComponentPopupBuilder(component, null);
+
+        JBPopup unloggedPreferencesPopup = gutterMethodComponentPopup
+                .setProject(project)
+                .setShowBorder(true)
+                .setShowShadow(true)
+                .setFocusable(true)
+                .setResizable(true)
+                .setMovable(true)
+                .setRequestFocus(true)
+                .setCancelOnClickOutside(false)
+                .setCancelOnOtherWindowOpen(false)
+                .setCancelKeyEnabled(false)
+                .setBelongsToGlobalPopupStack(false)
+                .setTitle("Unlogged Preferences")
+//                        .setCancelCallback(new Computable<Boolean>() {
+//                            @Override
+//                            public Boolean compute() {
+//                                return null;
+//                            }
+//                        })
+                .setTitleIcon(new ActiveIcon(UIUtils.UNLOGGED_ICON_DARK))
+                .createPopup();
+
+        component.setMaximumSize(new Dimension(500, 800));
+        ComponentLifecycleListener<StompFilter> componentLifecycleListener = () -> {
+            unloggedPreferencesPopup.cancel();
+            if (originalFilter.equals(stompFilterModel)) {
+                return;
+            }
+            if (stompFilterModel.followEditor) {
+                lastMethodFocussed = null;
+                ApplicationManager.getApplication().executeOnPooledThread(() -> {
+                    insidiousService.populateFromEditors(null);
+                });
+            }
+            JSONObject eventProperties = new JSONObject();
+            eventProperties.put("filter", stompFilterModel.toString());
+            UsageInsightTracker.getInstance().RecordEvent("FILTER_UPDATED", eventProperties);
+
+            updateFilterLabel();
+            resetAndReload();
+        };
+
+        stompFilter.setOnCloseListener(componentLifecycleListener);
+
+        unloggedPreferencesPopup.showCenteredInCurrentWindow(project);
+
+        ApplicationManager.getApplication().invokeLater(() -> {
+            stompFilter.setSelectedTab(selectedTabIndex);
+        });
+    }
+
+    private void clearFilter() {
+        stompFilterModel.getIncludedMethodNames().clear();
+        stompFilterModel.getExcludedMethodNames().clear();
+        stompFilterModel.getIncludedClassNames().clear();
+        stompFilterModel.getExcludedClassNames().clear();
+    }
+
+    private void saveSelected() {
+
+        if (selectedCandidates.isEmpty()) {
+            InsidiousNotification.notifyMessage("Select items on the timeline to save",
+                    NotificationType.INFORMATION);
+            return;
+
+        }
+
+        ProgressManager.getInstance().
+                runProcessWithProgressSynchronously(() -> {
+                    ProgressIndicator progressIndicator = ProgressManager.getInstance()
+                            .getProgressIndicator();//(project, "New project...");
+                    progressIndicator.setIndeterminate(false);
+                    progressIndicator.setFraction(0);
+                    CountDownLatch cdl = new CountDownLatch(1);
+//                    progressIndicator.setIndeterminate(false);
+//                    progressIndicator.setFraction(0.25);
+                    progressIndicator.setText(
+                            "Gathering type information for " + selectedCandidates.size() + " replays");
+//                            ApplicationManager.getApplication().executeOnPooledThread(() -> {
+                    SaveFormListener candidateLifeListener = new SaveFormListener(insidiousService);
+
+                    ArrayList<TestCandidateBareBone> sourceCandidates = new ArrayList<>();
+                    int size = selectedCandidates.size();
+                    for (int i = 0; i < size; i++) {
+                        TestCandidateBareBone selectedCandidate = selectedCandidates.get(i);
+                        sourceCandidates.add(selectedCandidate);
+                    }
+
+
+                    saveFormReference = new TestCandidateSaveForm(sourceCandidates, candidateLifeListener,
+                            () -> {
+                                ApplicationManager.getApplication().invokeLater(() -> {
+                                    insidiousService.showRouter();
+                                });
+                            }, progressIndicator);
+                    cdl.countDown();
+
+                    ApplicationManager.getApplication().invokeLater(() -> {
+                        JPanel saveFormComponent = saveFormReference.getComponent();
+                        saveFormComponent.setMaximumSize(new Dimension(600, 800));
+                        scrollContainer.revalidate();
+                        scrollContainer.repaint();
+                        insidiousService.showSaveFrom(saveFormReference);
+                    });
+
+
+//                            });
+
+
+                }, "Save Replays", true, insidiousService.getProject());
+
+
+    }
+
+    public void resetAndReload() {
+        ApplicationManager.getApplication().invokeLater(() -> {
+            updateFilterLabel();
+            if (sessionInstance == null) {
+                return;
+            }
+            resetTimeline();
+            ApplicationManager.getApplication().executeOnPooledThread(() -> {
+                if (sessionInstance.isScanEnable() && sessionInstance.isConnected()) {
+                    ApplicationManager.getApplication().invokeLater(stompStatusComponent::setConnected);
+                } else {
+                    ApplicationManager.getApplication().invokeLater(stompStatusComponent::setDisconnected);
+                }
+            });
+
+            if (candidateQueryLatch != null) {
+                candidateQueryLatch.decrementAndGet();
+            }
+            loadNewCandidates();
+            itemPanel.revalidate();
+            itemPanel.repaint();
+            historyStreamScrollPanel.revalidate();
+            historyStreamScrollPanel.repaint();
+        });
+    }
+
+    private void executeSingleTestCandidate(TestCandidateBareBone candidateBareBone) {
+        ApplicationManager.getApplication().executeOnPooledThread(() -> {
+
+            TestCandidateMetadata loadedCandidate = ApplicationManager.getApplication()
+                    .runReadAction((Computable<TestCandidateMetadata>) () -> {
+                        return insidiousService.getTestCandidateById(candidateBareBone.getId(), false);
+                    });
+            MethodCallExpression mainMethod = loadedCandidate.getMainMethod();
+            Pair<PsiMethod, PsiSubstitutor> psiMethod = ClassTypeUtils.getPsiMethod(mainMethod,
+                    insidiousService.getProject());
+            PsiMethod methodPsiElement = psiMethod == null ? null : psiMethod.getFirst();
+            if (methodPsiElement == null) {
+                InsidiousNotification.notifyMessage("Failed to identify method in source for " +
+                        mainMethod.getMethodName(), NotificationType.WARNING);
+                return;
+            }
             long batchTime = System.currentTimeMillis();
 
             insidiousService.executeSingleCandidate(
-                    new StoredCandidate(selectedCandidate),
-                    new ClassUnderTest(selectedCandidate.getFullyQualifiedClassname()),
+                    new StoredCandidate(loadedCandidate),
+                    new ClassUnderTest(loadedCandidate.getFullyQualifiedClassname()),
                     ExecutionRequestSourceType.Bulk,
                     (testCandidate, agentCommandResponse, diffResult) -> {
                         if (agentCommandResponse.getResponseType() == ResponseType.FAILED) {
@@ -473,126 +619,155 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         });
     }
 
-    @Nullable
-    private PsiMethod getPsiMethod(TestCandidateMetadata selectedCandidate) {
-        PsiClass classPsiElement = JavaPsiFacade
-                .getInstance(insidiousService.getProject())
-                .findClass(selectedCandidate.getFullyQualifiedClassname(),
-                        GlobalSearchScope.projectScope(insidiousService.getProject()));
-        PsiMethod methodPsiElement = null;
-        JvmMethod[] methodsByName = classPsiElement.findMethodsByName(
-                selectedCandidate.getMainMethod().getMethodName());
-        for (JvmMethod jvmMethod : methodsByName) {
-            if (selectedCandidate.getMainMethod().getArguments().size() == jvmMethod.getParameters().length) {
-                methodPsiElement = (PsiMethod) jvmMethod.getSourceElement();
-            }
-
-        }
-        return methodPsiElement;
-    }
-
     public String simpleTime(Date currentDate) {
         return dateFormat.format(currentDate);
     }
 
     public JComponent getComponent() {
+
+
         return mainPanel;
     }
 
     @Override
-    synchronized public void accept(TestCandidateMetadata testCandidateMetadata) {
+    public String getTitle() {
+        return "Execution timeline";
+    }
+
+    @Override
+    synchronized public void accept(final List<TestCandidateBareBone> testCandidateMetadataList) {
+
+
         if (!welcomePanelRemoved) {
-            welcomePanel.setVisible(false);
             historyStreamScrollPanel.setVisible(true);
             welcomePanelRemoved = true;
         }
 
-        if (testCandidateMetadata.getExitProbeIndex() > lastEventId) {
-            lastEventId = testCandidateMetadata.getExitProbeIndex();
-        }
-        if (stompItems.size() > 0) {
+        totalAcceptedCount++;
 
-            boolean isExisting = false;
-            for (StompItem stompItem : stompItems) {
-                if (stompItem.getTestCandidate().getEntryProbeIndex() == testCandidateMetadata.getEntryProbeIndex()) {
-                    isExisting = true;
-                    break;
-                }
+        if (totalAcceptedCount > 10) {
+            if (!insidiousService.getProject().isDisposed()) {
+                new GotItTooltip("Unlogged.Stomp.Item.Filter",
+                        "Filter items on the timeline by including and excluding classes so only relevant replays show up",
+                        this)
+                        .withHeader("Filter whats visible")
+                        .withIcon(UIUtils.UNLOGGED_ICON_DARK_SVG)
+                        .withLink("Enable Follow Method Filter", () -> {
+                            stompFilterModel.setFollowEditor(true);
+                            InsidiousNotification.notifyMessage(
+                                    "Filter will follow method focussed in editor", NotificationType.INFORMATION
+                            );
+                        })
+                        .withPosition(Balloon.Position.atLeft)
+                        .show(actionToolbarContainer, GotItTooltip.LEFT_MIDDLE);
             }
-            if (isExisting) {
-                // matched an existing pinned item
-                return;
-            }
 
-
-            StompItem last = stompItems.get(stompItems.size() - 1);
-            long gapStartIndex = last.getTestCandidate().getExitProbeIndex();
-            long gapEndIndex = testCandidateMetadata.getEntryProbeIndex();
-            int count = insidiousService.getMethodCallCountBetween(gapStartIndex, gapEndIndex);
-            if (count > 0) {
-                AFewCallsLater aFewCallsLater = new AFewCallsLater(gapStartIndex, gapEndIndex, count,
-                        this);
-
-                JPanel labelPanel = aFewCallsLater.getComponent();
-//                labelPanel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-
-                JPanel rowPanel = new JPanel(new BorderLayout());
-                rowPanel.add(labelPanel, BorderLayout.CENTER);
-                rowPanel.add(createLinePanel(createLineComponent()), BorderLayout.EAST);
-                if (directInvokeComponent == null) {
-                    makeSpace(0);
-                    itemPanel.add(rowPanel, createGBCForLeftMainComponent(), 0);
-                } else {
-                    makeSpace(1);
-                    itemPanel.add(rowPanel, createGBCForLeftMainComponent(), 1);
-                }
-            }
         }
 
-        if (directInvokeComponent == null) {
-            addCandidateToUi(testCandidateMetadata, 0);
-        } else {
-            addCandidateToUi(testCandidateMetadata, 1);
+        for (TestCandidateBareBone testCandidateMetadata : testCandidateMetadataList) {
+            if (isAcceptable(testCandidateMetadata)) {
+                incomingQueue.offer(testCandidateMetadata);
+            }
         }
 
     }
 
-    private void addCandidateToUi(TestCandidateMetadata testCandidateMetadata, int index) {
-        StompItem stompItem = new StompItem(testCandidateMetadata, this, insidiousService);
+    private boolean isAcceptable(TestCandidateBareBone testCandidateMetadata) {
+        if (testCandidateMetadata.getMethodUnderTest().getName().contains("$")) {
+            // lambda function
+            return false;
+        }
+        String className = testCandidateMetadata.getMethodUnderTest().getClassName();
+        String methodName = testCandidateMetadata.getMethodUnderTest().getName();
+        if (!stompFilterModel.getIncludedClassNames().isEmpty()) {
+            if (!stompFilterModel.getIncludedClassNames().contains(className)) {
+                return false;
+            }
+        }
+        if (!stompFilterModel.getIncludedMethodNames().isEmpty()) {
+            if (!stompFilterModel.getIncludedMethodNames().contains(methodName)) {
+                return false;
+            }
+        }
+        if (!stompFilterModel.getExcludedClassNames().isEmpty()) {
+            if (stompFilterModel.getExcludedClassNames().contains(className)) {
+                return false;
+            }
+        }
+        if (!stompFilterModel.getExcludedMethodNames().isEmpty()) {
+            if (stompFilterModel.getExcludedMethodNames().contains(methodName)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private synchronized void addCandidateToUi(TestCandidateBareBone testCandidateMetadata, int index) {
+        JCheckBox comp1 = new JCheckBox();
+        StompItem stompItem = new StompItem(testCandidateMetadata, this, insidiousService, comp1);
+
+
+        JScrollBar verticalScrollBar = historyStreamScrollPanel.getVerticalScrollBar();
+        int scrollPosition = verticalScrollBar.getValue();
 
         JPanel rowPanel = new JPanel();
         rowPanel.setLayout(new BorderLayout());
 
         stompItems.add(stompItem);
 
-        JPanel component = stompItem.getComponent();
-        candidateMetadataStompItemMap.put(testCandidateMetadata, component);
-        component.setMaximumSize(new Dimension(500, component_height));
-        component.setMinimumSize(new Dimension(300, component_height));
+        final JPanel component = stompItem.getComponent();
 
+        component.addMouseListener(new MouseAdapter() {
+            @Override
+            public void mouseClicked(MouseEvent e) {
+                logger.warn("stomp item mouse click -> " + e.getButton());
+                super.mouseClicked(e);
+            }
+        });
+        candidateMetadataStompItemMap.put(testCandidateMetadata, component);
 
         rowPanel.add(component, BorderLayout.CENTER);
 
-        JPanel dateAndTimePanel = createDateAndTimePanel(createTimeLineComponent(),
+        JPanel dateAndTimePanel = createDateAndTimePanel(createTimeLineComponent(comp1),
                 Date.from(Instant.ofEpochMilli(testCandidateMetadata.getCreatedAt())));
-        rowPanel.add(dateAndTimePanel, BorderLayout.EAST);
+        rowPanel.add(dateAndTimePanel, BorderLayout.WEST);
+        stompItem.setStompRowItem(rowPanel);
 
 
-        makeSpace(index);
-        GridBagConstraints gbcForLeftMainComponent = createGBCForLeftMainComponent();
-        gbcForLeftMainComponent.gridy = index;
+//        makeSpace(index);
+        GridBagConstraints gbcForLeftMainComponent = createGBCForLeftMainComponent(index);
         itemPanel.add(rowPanel, gbcForLeftMainComponent);
         itemPanel.revalidate();
         itemPanel.repaint();
         historyStreamScrollPanel.revalidate();
         historyStreamScrollPanel.repaint();
+
+        if (itemPanel.getComponentCount() > 5 && !shownGotItNofiticaton) {
+            shownGotItNofiticaton = true;
+            new GotItTooltip("Unlogged.Stomp.Item.Show",
+                    "<html>Each method execution shows up here. <br>" +
+                            "Hover on and select by clicking the checkbox<br>"
+                            + "Right click to include/exclude </html>",
+                    insidiousService.getProject())
+                    .withPosition(Balloon.Position.below)
+                    .show(component, GotItTooltip.BOTTOM_MIDDLE);
+
+            new GotItTooltip("Unlogged.Stomp.Item.Checkbox",
+                    "<html>Hover and click the checkbox to select a replay record.<br>Quick replay using the pink play " +
+                            "button</html>",
+                    insidiousService.getProject())
+                    .withPosition(Balloon.Position.below)
+                    .show(component, GotItTooltip.BOTTOM_LEFT);
+
+        }
+
     }
 
-    private GridBagConstraints createGBCForLeftMainComponent() {
+    private GridBagConstraints createGBCForLeftMainComponent(int yIndex) {
         GridBagConstraints gbc = new GridBagConstraints();
 
         gbc.gridx = 0;
-        gbc.gridy = 0;
+        gbc.gridy = yIndex;
         gbc.gridwidth = 1;
         gbc.gridheight = 1;
 
@@ -607,25 +782,43 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         return gbc;
     }
 
-//    private GridBagConstraints createGBCForLeftDirectInvokeComponent() {
-//        GridBagConstraints gbc = new GridBagConstraints();
+//    private GridBagConstraints createGBCForDateAndTimePanel() {
+//        GridBagConstraints gbc1 = new GridBagConstraints();
 //
-//        gbc.gridx = 0;
-//        gbc.gridy = 0;
-//        gbc.gridwidth = 1;
-//        gbc.gridheight = 1;
+//        gbc1.gridx = 1;
+//        gbc1.gridy = GridBagConstraints.RELATIVE;
+//        gbc1.gridwidth = 1;
+//        gbc1.gridheight = 1;
 //
-//        gbc.weightx = 1;
-//        gbc.weighty = 1;
-//        gbc.anchor = GridBagConstraints.LINE_START;
-//        gbc.fill = GridBagConstraints.HORIZONTAL;
+//        gbc1.weightx = 0.1;
+//        gbc1.weighty = 0." ";
+//        gbc1.anchor = GridBagConstraints.LINE_START;
+//        gbc1.fill = GridBagConstraints.BOTH;
 //
-//        gbc.insets = JBUI.insetsBottom(8);
-//        gbc.ipadx = 0;
-//        gbc.ipady = 0;
-//        return gbc;
+//        gbc1.insets = JBUI.emptyInsets();
+//        gbc1.ipadx = 0;
+//        gbc1.ipady = 0;
+//        return gbc1;
 //    }
 
+//    private GridBagConstraints createGBCForLinePanel() {
+//        GridBagConstraints gbc1 = new GridBagConstraints();
+//
+//        gbc1.gridx = 1;
+//        gbc1.gridy = GridBagConstraints.RELATIVE;
+//        gbc1.gridwidth = 1;
+//        gbc1.gridheight = 1;
+//
+//        gbc1.weightx = 0.1;
+//        gbc1.weighty = 0;
+//        gbc1.anchor = GridBagConstraints.LINE_START;
+//        gbc1.fill = GridBagConstraints.VERTICAL;
+//
+//        gbc1.insets = JBUI.insets(0, 16, 0, 0);
+//        gbc1.ipadx = 0;
+//        gbc1.ipady = 0;
+//        return gbc1;
+//    }
 
     private GridBagConstraints createGBCForProcessStartedComponent() {
         GridBagConstraints gbc = new GridBagConstraints();
@@ -665,60 +858,22 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         return gbc;
     }
 
-//    private GridBagConstraints createGBCForDateAndTimePanel() {
-//        GridBagConstraints gbc1 = new GridBagConstraints();
-//
-//        gbc1.gridx = 1;
-//        gbc1.gridy = GridBagConstraints.RELATIVE;
-//        gbc1.gridwidth = 1;
-//        gbc1.gridheight = 1;
-//
-//        gbc1.weightx = 0.1;
-//        gbc1.weighty = 0.3;
-//        gbc1.anchor = GridBagConstraints.LINE_START;
-//        gbc1.fill = GridBagConstraints.BOTH;
-//
-//        gbc1.insets = JBUI.emptyInsets();
-//        gbc1.ipadx = 0;
-//        gbc1.ipady = 0;
-//        return gbc1;
-//    }
-
-//    private GridBagConstraints createGBCForLinePanel() {
-//        GridBagConstraints gbc1 = new GridBagConstraints();
-//
-//        gbc1.gridx = 1;
-//        gbc1.gridy = GridBagConstraints.RELATIVE;
-//        gbc1.gridwidth = 1;
-//        gbc1.gridheight = 1;
-//
-//        gbc1.weightx = 0.1;
-//        gbc1.weighty = 0;
-//        gbc1.anchor = GridBagConstraints.LINE_START;
-//        gbc1.fill = GridBagConstraints.VERTICAL;
-//
-//        gbc1.insets = JBUI.insets(0, 16, 0, 0);
-//        gbc1.ipadx = 0;
-//        gbc1.ipady = 0;
-//        return gbc1;
-//    }
-
     private JPanel createDateAndTimePanel(JPanel lineContainer, Date date) {
-        SimpleDateFormat sdf = new SimpleDateFormat("HH:mm:ss");
+//        SimpleDateFormat sdf = new SimpleDateFormat("HH:mm:ss");
         JPanel comp = new JPanel();
         BorderLayout mgr = new BorderLayout();
         comp.setLayout(mgr);
-        JLabel hello = new JLabel(String.format("          %s", sdf.format(date)));
-        Font font = hello.getFont();
-        hello.setFont(font.deriveFont(10.0f));
-        hello.setForeground(Color.decode("#8C8C8C"));
-        hello.setUI(new VerticalLabelUI(true));
-        comp.add(hello, BorderLayout.CENTER);
+//        JLabel timeLabel = new JLabel(String.format("          %s", sdf.format(date)));
+//        Font font = timeLabel.getFont();
+//        timeLabel.setFont(font.deriveFont(10.0f));
+//        timeLabel.setForeground(Color.decode("#8C8C8C"));
+//        timeLabel.setUI(new VerticalLabelUI(true));
+//        comp.add(timeLabel, BorderLayout.CENTER);
 
 
         comp.add(lineContainer, BorderLayout.WEST);
-        comp.setSize(new Dimension(50, -1));
-        comp.setPreferredSize(new Dimension(50, -1));
+        comp.setSize(new Dimension(40, -1));
+        comp.setPreferredSize(new Dimension(40, -1));
         return comp;
     }
 
@@ -730,7 +885,7 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         comp1.setUI(new VerticalLabelUI(true));
 
 //        comp.add(comp1, BorderLayout.CENTER);
-        lineContainer.setBorder(BorderFactory.createEmptyBorder(0, 16, 0, 4));
+        lineContainer.setBorder(BorderFactory.createEmptyBorder(0, 12, 0, 4));
         comp.add(lineContainer, BorderLayout.WEST);
         comp.setSize(new Dimension(50, -1));
         comp.setPreferredSize(new Dimension(50, -1));
@@ -754,21 +909,19 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         return lineContainer;
     }
 
-    private JPanel createTimeLineComponent() {
+    private JPanel createTimeLineComponent(JCheckBox comp1) {
         JPanel lineContainer = new JPanel();
         lineContainer.setLayout(new GridBagLayout());
-        lineContainer.setBorder(BorderFactory.createEmptyBorder(0, 4, 0, 2));
+        lineContainer.setBorder(BorderFactory.createEmptyBorder(0, 4, 0, 0));
 
-        JLabel comp1 = new JLabel();
-        comp1.setIcon(UIUtils.CIRCLE_EMPTY);
-        comp1.setMaximumSize(new Dimension(16, 16));
-        comp1.setMinimumSize(new Dimension(16, 16));
-        comp1.setPreferredSize(new Dimension(16, 16));
+        comp1.setMaximumSize(new Dimension(18, 18));
+        comp1.setMinimumSize(new Dimension(18, 18));
+        comp1.setPreferredSize(new Dimension(18, 18));
 
         JPanel comp2 = new JPanel();
         comp2.add(comp1);
 
-        comp2.setBorder(BorderFactory.createEmptyBorder(1, 0, 1, 0));
+        comp2.setBorder(BorderFactory.createEmptyBorder(1, 1, 1, 0));
 
         GridBagConstraints constraints = new GridBagConstraints();
         constraints.gridx = 0;
@@ -802,7 +955,7 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
     @NotNull
     private JSeparator createSeparator() {
         JSeparator separator = new JSeparator(SwingConstants.VERTICAL);
-        Dimension size = new Dimension(2, (component_height / 4) - 2); // Set preferred size for the separator
+        Dimension size = new Dimension(2, (COMPONENT_HEIGHT / 4) - 2); // Set preferred size for the separator
         separator.setForeground(Color.decode("#D9D9D9"));
         separator.setPreferredSize(size);
         separator.setMaximumSize(size);
@@ -811,16 +964,26 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
     }
 
     @Override
-    public void executeCandidate(List<TestCandidateMetadata> metadata,
+    public void executeCandidate(List<TestCandidateBareBone> metadata,
                                  ClassUnderTest classUnderTest, ExecutionRequestSourceType source,
-                                 AgentCommandResponseListener<TestCandidateMetadata, String> responseListener) {
+                                 AgentCommandResponseListener<TestCandidateBareBone, String> responseListener) {
 
         if (source == ExecutionRequestSourceType.Single) {
-            TestCandidateMetadata selectedCandidate = metadata.get(0);
-            PsiMethod methodPsiElement = ApplicationManager.getApplication()
-                    .runReadAction((Computable<PsiMethod>) () -> getPsiMethod(selectedCandidate));
-            showDirectInvoke(new JavaMethodAdapter(methodPsiElement));
-            directInvokeComponent.triggerExecute();
+            TestCandidateBareBone candidateBareBone = metadata.get(0);
+            TestCandidateMetadata selectedCandidate = ApplicationManager.getApplication().runReadAction(
+                    (Computable<TestCandidateMetadata>) () -> insidiousService.getTestCandidateById(
+                            candidateBareBone.getId(), true));
+            PsiMethod methodPsiElement = ClassTypeUtils.getPsiMethod(selectedCandidate.getMainMethod(),
+                    insidiousService.getProject()).getFirst();
+            if (methodPsiElement == null) {
+                InsidiousNotification.notifyMessage("Failed to identify method in source for " +
+                        selectedCandidate.getMainMethod().getMethodName(), NotificationType.WARNING);
+                return;
+            }
+
+            JavaMethodAdapter method = new JavaMethodAdapter(methodPsiElement);
+            this.methodAdapter = method;
+            insidiousService.showDirectInvoke(method, selectedCandidate);
         }
 
     }
@@ -831,173 +994,233 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
     }
 
     @Override
-    public void onSaved(TestCandidateMetadata storedCandidate) {
+    public void onSaved(TestCandidateBareBone storedCandidate) {
 
     }
 
     @Override
-    public void onSelected(TestCandidateMetadata storedCandidate) {
+    public void onSelected(TestCandidateBareBone storedCandidate) {
         this.selectedCandidates.add(storedCandidate);
         updateControlPanel();
     }
 
     private void updateControlPanel() {
 
+        selectedCountLabel.setForeground(JBColor.DARK_GRAY);
         selectedCountLabel.setText(selectedCandidates.size() + " selected");
-        if (selectedCandidates.size() > 0 && !controlPanel.isEnabled()) {
-//            reloadButton.setEnabled(true);
-
+        if (!selectedCandidates.isEmpty()) {
             clearSelectionLabel.setVisible(true);
-            selectAllLabel.setVisible(true);
+            new GotItTooltip("Unlogged.Stomp.ActionToolbar",
+                    "Use the toolbar to replay/save or generate test case for multiple method replays at once",
+                    this)
+                    .withPosition(Balloon.Position.above)
+                    .show(actionToolbar.getComponent(), GotItTooltip.TOP_MIDDLE);
 
 
-            generateJUnitButton.setEnabled(true);
-            saveAsMockButton.setEnabled(true);
-            replayButton.setEnabled(true);
-            saveReplayButton.setEnabled(true);
-            controlPanel.setEnabled(true);
-//            setLabelsVisible(true);
-        } else if (selectedCandidates.size() == 0 && controlPanel.isEnabled()) {
-            selectedCountLabel.setText("None selected");
+        } else {
+            selectedCountLabel.setText("0 selected");
             clearSelectionLabel.setVisible(false);
-            selectAllLabel.setVisible(false);
-
-
-//            reloadButton.setEnabled(false);
-            generateJUnitButton.setEnabled(false);
-            saveAsMockButton.setEnabled(false);
-            replayButton.setEnabled(false);
-            saveReplayButton.setEnabled(false);
-            controlPanel.setEnabled(false);
-//            setLabelsVisible(false);
         }
     }
 
     @Override
-    public void unSelected(TestCandidateMetadata storedCandidate) {
+    public void unSelected(TestCandidateBareBone storedCandidate) {
         this.selectedCandidates.remove(storedCandidate);
         updateControlPanel();
     }
 
     @Override
-    public void onSaveAsTestRequest(TestCandidateMetadata storedCandidate) {
+    public void onDeleteRequest(TestCandidateBareBone storedCandidate) {
 
     }
 
     @Override
-    public void onSaveAsMockRequest(TestCandidateMetadata storedCandidate) {
-
-        ApplicationManager.getApplication().executeOnPooledThread(() -> {
-            PsiMethod targetMethodPsi = getPsiMethod(storedCandidate);
-            MethodUnderTest methodUnderTest = MethodUnderTest.fromMethodAdapter(new JavaMethodAdapter(targetMethodPsi));
-            DeclaredMock declaredMock = new DeclaredMock();
-            declaredMock.setMethodName(methodUnderTest.getName());
-            declaredMock.setName("mock recorded on " + new Date().toString());
-            declaredMock.setFieldName("*");
-            declaredMock.setId(UUID.randomUUID().toString());
-            declaredMock.setFieldTypeName(methodUnderTest.getClassName());
-            declaredMock.setSourceClassName("*");
-
-            List<ParameterMatcher> whenParameter = new ArrayList<>();
-            for (Parameter argument : storedCandidate.getMainMethod().getArguments()) {
-                ParameterMatcher parameterMatcher = new ParameterMatcher();
-                parameterMatcher.setType(ParameterMatcherType.EQUAL);
-                parameterMatcher.setName(argument.getName());
-                parameterMatcher.setValue(argument.getStringValue());
-                whenParameter.add(parameterMatcher);
-            }
-
-
-            declaredMock.setWhenParameter(whenParameter);
-            ThenParameter thenParameter = new ThenParameter();
-
-            Parameter returnValue = storedCandidate.getMainMethod().getReturnValue();
-            if (returnValue.isException()) {
-                thenParameter.setMethodExitType(MethodExitType.EXCEPTION);
-            } else if (returnValue.getValue() == 0) {
-                thenParameter.setMethodExitType(MethodExitType.NULL);
-            } else {
-                thenParameter.setMethodExitType(MethodExitType.NORMAL);
-            }
-            ReturnValue returnParameter = new ReturnValue();
-            returnParameter.setClassName(returnValue.getType());
-            returnParameter.setReturnValueType(ReturnValueType.REAL);
-            returnParameter.setValue(returnValue.getStringValue());
-            thenParameter.setReturnParameter(returnParameter);
-
-
-            List<ThenParameter> thenParameter1 = new ArrayList<>();
-            thenParameter1.add(thenParameter);
-            declaredMock.setThenParameter(thenParameter1);
-            insidiousService.saveMockDefinition(declaredMock, methodUnderTest);
-        });
+    public void onDeleted(TestCandidateBareBone storedCandidate) {
 
     }
 
     @Override
-    public void onDeleteRequest(TestCandidateMetadata storedCandidate) {
+    public void onUpdated(TestCandidateBareBone storedCandidate) {
 
     }
 
     @Override
-    public void onDeleted(TestCandidateMetadata storedCandidate) {
+    public void onUpdateRequest(TestCandidateBareBone storedCandidate) {
 
     }
 
     @Override
-    public void onUpdated(TestCandidateMetadata storedCandidate) {
+    public void onGenerateJunitTestCaseRequest(List<TestCandidateBareBone> storedCandidate, TestCaseGenerationConfiguration generationConfiguration) {
 
-    }
-
-    @Override
-    public void onUpdateRequest(TestCandidateMetadata storedCandidate) {
-
-    }
-
-    @Override
-    public void onGenerateJunitTestCaseRequest(TestCandidateMetadata storedCandidate) {
-
-        TestCaseGenerationConfiguration generationConfiguration = new TestCaseGenerationConfiguration(
-                TestFramework.JUnit5, MockFramework.Mockito, JsonFramework.Gson, ResourceEmbedMode.IN_FILE
-        );
         TestCaseService testCaseService = insidiousService.getTestCaseService();
+        if (testCaseService == null) {
+            InsidiousNotification.notifyMessage("Please start the application with unlogged-sdk to generate JUnit " +
+                    "test cases", NotificationType.WARNING);
+            return;
+        }
 
-        for (TestCandidateMetadata testCandidateMetadata : selectedCandidates) {
+        ArrayList<TestCandidateBareBone> selectedCandidatesCopy = new ArrayList<>(storedCandidate);
+        for (TestCandidateBareBone testCandidateShell : selectedCandidatesCopy) {
 
             try {
 
-                Parameter testSubject = testCandidateMetadata.getTestSubject();
-                if (testSubject.isException()) {
-                    continue;
-                }
-                MethodCallExpression callExpression = testCandidateMetadata.getMainMethod();
-                logger.warn(
-                        "Generating test case: " + testSubject.getType() + "." + callExpression.getMethodName() + "()");
-                generationConfiguration.getTestCandidateMetadataList().clear();
-                generationConfiguration.getTestCandidateMetadataList().add(testCandidateMetadata);
+                generateTestCaseSingle(generationConfiguration, testCaseService, testCandidateShell);
 
-                generationConfiguration.getCallExpressionList().clear();
-                generationConfiguration.getCallExpressionList().addAll(testCandidateMetadata.getCallsList());
-
-                TestCaseUnit testCaseUnit = testCaseService.buildTestCaseUnit(generationConfiguration);
-                List<TestCaseUnit> testCaseUnit1 = new ArrayList<>();
-                testCaseUnit1.add(testCaseUnit);
-                TestSuite testSuite = new TestSuite(testCaseUnit1);
-                insidiousService.getJUnitTestCaseWriter().saveTestSuite(testSuite);
-
+            } catch (ProcessCanceledException pce) {
+                //
             } catch (Exception e) {
-                e.printStackTrace();
+                logger.error("Failed to generate test case", e);
                 InsidiousNotification.notifyMessage(
-                        "Failed to generate test case for [" + testCandidateMetadata.getTestSubject()
-                                .getType() + "] " + e.getMessage(), NotificationType.ERROR);
+                        "Failed to generate test case for [" + testCandidateShell.getMethodUnderTest()
+                                .getClassName() + "] " + e.getMessage(),
+                        NotificationType.ERROR);
             }
         }
+        logger.info("completed");
 
 
     }
 
+    private boolean generateTestCaseSingle(
+            TestCaseGenerationConfiguration generationConfiguration,
+            TestCaseService testCaseService,
+            TestCandidateBareBone testCandidateShell) throws Exception {
+        TestCandidateMetadata loadedTestCandidate = insidiousService.getTestCandidateById(testCandidateShell.getId(),
+                true);
+        Parameter testSubject = loadedTestCandidate.getTestSubject();
+        if (testSubject.isException()) {
+            return true;
+        }
+        MethodCallExpression callExpression = loadedTestCandidate.getMainMethod();
+        String methodName = callExpression.getMethodName();
+        logger.warn(
+                "Generating test case: " + testSubject.getType() + "." + methodName + "()");
+        generationConfiguration.getTestCandidateMetadataList().clear();
+        generationConfiguration.getTestCandidateMetadataList().add(loadedTestCandidate);
+
+        generationConfiguration.getCallExpressionList().clear();
+        generationConfiguration.getCallExpressionList().addAll(loadedTestCandidate.getCallsList());
+
+        generationConfiguration.setTestMethodName(
+                "test" + methodName.substring(0, 1).toUpperCase(Locale.ROOT) + methodName.substring(1));
+        TestCaseUnit testCaseUnit = DumbService.getInstance(project)
+                .tryRunReadActionInSmartMode(() -> {
+                    try {
+                        return testCaseService.buildTestCaseUnit(generationConfiguration);
+                    } catch (ProcessCanceledException pce) {
+                        return null;
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    }
+                }, "Building test");
+        if (testCaseUnit == null) {
+            return false;
+        }
+        List<TestCaseUnit> testCaseUnit1 = new ArrayList<>();
+        testCaseUnit1.add(testCaseUnit);
+        TestSuite testSuite = new TestSuite(testCaseUnit1);
+        insidiousService.getJUnitTestCaseWriter().saveTestSuite(testSuite);
+        return false;
+    }
+
     @Override
-    public void onCandidateSelected(TestCandidateMetadata testCandidateMetadata) {
+    public void onCandidateSelected(TestCandidateBareBone testCandidateMetadata, MouseEvent e) {
+        if (e.getButton() == MouseEvent.BUTTON3) {
+
+
+//            ContextMenuPopupHandler.Simple group = new ContextMenuPopupHandler.Simple("io.unlogged");
+
+//            ActionGroup actionGroup = group.getActionGroup(e);
+
+            String fullyQualifiedClassname = testCandidateMetadata.getMethodUnderTest().getClassName();
+            String methodName = testCandidateMetadata.getMethodUnderTest().getName();
+            IPopupChooserBuilder<String> chooserPopUp = JBPopupFactory.getInstance()
+                    .createPopupChooserBuilder(Arrays.asList(
+                            "Include class " + fullyQualifiedClassname,
+                            "Exclude class " + fullyQualifiedClassname,
+                            "Include method " + methodName,
+                            "Exclude method " + methodName
+                    ));
+
+            chooserPopUp
+                    .setRequestFocus(true)
+                    .setItemChosenCallback(selection -> {
+
+                        logger.warn("selected filter [" + selection + "]");
+                        String[] parts = selection.split(" ");
+                        switch (parts[0]) {
+                            case "Include":
+
+                                switch (parts[1]) {
+                                    case "class":
+                                        stompFilterModel.getIncludedClassNames().add(fullyQualifiedClassname);
+                                        stompFilterModel.getExcludedClassNames().remove(fullyQualifiedClassname);
+                                        break;
+                                    case "method":
+                                        stompFilterModel.getIncludedMethodNames().add(methodName);
+                                        stompFilterModel.getExcludedMethodNames().remove(methodName);
+                                        break;
+                                }
+
+
+                                break;
+                            case "Exclude":
+
+                                switch (parts[1]) {
+                                    case "class":
+                                        stompFilterModel.getIncludedClassNames().remove(fullyQualifiedClassname);
+                                        stompFilterModel.getExcludedClassNames().add(fullyQualifiedClassname);
+                                        break;
+                                    case "method":
+                                        stompFilterModel.getIncludedMethodNames().remove(methodName);
+                                        stompFilterModel.getExcludedMethodNames().add(methodName);
+                                        break;
+                                }
+
+
+                                break;
+                        }
+                        updateFilterLabel();
+                        resetAndReload();
+
+                    })
+                    .setCancelOnClickOutside(true)
+//                    .setCancelKeyEnabled(true)
+                    .createPopup()
+                    .show(new RelativePoint(e));
+
+        }
+    }
+
+    private void updateFilterLabel() {
+        StringBuilder tooltipText = new StringBuilder();
+        int total = stompFilterModel.getIncludedClassNames().size()
+                + stompFilterModel.getIncludedMethodNames().size()
+                + stompFilterModel.getExcludedClassNames().size()
+                + stompFilterModel.getExcludedMethodNames().size();
+        if (total == 0) {
+            clearFilterLabel.setVisible(false);
+//            filterAppliedLabel.setVisible(false);
+        } else {
+            clearFilterLabel.setVisible(true);
+        }
+
+        String text = total + (total == 1 ? " filter" : " filters");
+        ExecutionSessionSource source = configurationState.getExecutionSessionSource();
+        sourceLabelFilter.setText(
+                "<html><small>[<font color=blue><u>" + source.getSessionMode() + "</u></font>] " + "</font></small></html>");
+        ;
+        filterAppliedLabel.setText("<html><small>" + text + "</small></html>");
+
+        itemPanel.revalidate();
+        itemPanel.repaint();
+        historyStreamScrollPanel.revalidate();
+        historyStreamScrollPanel.repaint();
+
+        if (this.sessionInstance != null && this.sessionInstance.isConnected()) {
+            setConnected();
+        }
+
 
     }
 
@@ -1006,30 +1229,41 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
 
     }
 
-    @Override
-    public void onExpandChildren(TestCandidateMetadata candidateMetadata) {
-        try {
-            List<TestCandidateMetadata> childCandidates =
-                    insidiousService.getTestCandidateBetween(
-                            candidateMetadata.getMainMethod().getEntryProbe().getEventId(),
-                            candidateMetadata.getMainMethod().getReturnDataEvent().getEventId());
 
-            Component component = candidateMetadataStompItemMap.get(candidateMetadata);
-            int parentIndex = itemPanel.getComponentZOrder(component);
-
-            for (TestCandidateMetadata childCandidate : childCandidates) {
-                addCandidateToUi(childCandidate, parentIndex);
+    // removes the visible items on the timeline
+    public void clear() {
+        List<Component> itemsToNotDelete = new ArrayList<>();
+        List<StompItem> pinnedStomps = new ArrayList<>();
+        countByMethodName.clear();
+        for (StompItem stompItem : stompItems) {
+            if (stompItem.isPinned()) {
+                pinnedStomps.add(stompItem);
+                stompItem.setSelected(false);
+                itemsToNotDelete.add(stompItem.getComponent().getParent());
             }
-
-
-        } catch (SQLException e) {
-            InsidiousNotification.notifyMessage("Failed to load child calls: " + e.getMessage(),
-                    NotificationType.ERROR);
-            throw new RuntimeException(e);
         }
+        List<Component> allComponents = new ArrayList<>(Arrays.asList(itemPanel.getComponents()));
+        allComponents.removeAll(itemsToNotDelete);
+        for (Component component : allComponents) {
+            itemPanel.remove(component);
+        }
+        normalizeItemPanelComponents();
+
+
+        selectedCandidates.clear();
+        updateControlPanel();
+        stompItems.clear();
+        stompItems.addAll(pinnedStomps);
+
+        itemPanel.revalidate();
+        itemPanel.repaint();
+        historyStreamScrollPanel.revalidate();
+        historyStreamScrollPanel.repaint();
+
     }
 
-    public void clear() {
+
+    public void resetTimeline() {
         lastEventId = 0;
 
         List<Component> itemsToNotDelete = new ArrayList<>();
@@ -1049,10 +1283,6 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         normalizeItemPanelComponents();
 
 
-        if (directInvokeRow != null) {
-            itemPanel.add(directInvokeRow, createGBCForLeftMainComponent(), 0);
-        }
-
         GridBagConstraints gbcForFakeComponent = createGBCForFakeComponent();
         gbcForFakeComponent.gridy = itemPanel.getComponentCount();
         itemPanel.add(new JPanel(), gbcForFakeComponent, itemPanel.getComponentCount());
@@ -1061,6 +1291,12 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
         updateControlPanel();
         stompItems.clear();
         stompItems.addAll(pinnedStomps);
+
+        itemPanel.revalidate();
+        itemPanel.repaint();
+        historyStreamScrollPanel.revalidate();
+        historyStreamScrollPanel.repaint();
+
     }
 
     private void normalizeItemPanelComponents() {
@@ -1074,84 +1310,26 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
     }
 
     public void disconnected() {
+        logger.warn("setDisconnected: " + stompStatusComponent.hashCode());
         stompStatusComponent.setDisconnected();
-        scanEventListener.ended();
     }
 
-    public void showDirectInvoke(MethodAdapter method) {
-        if (directInvokeComponent == null) {
-            directInvokeComponent = new MethodDirectInvokeComponent(insidiousService, this);
-            JComponent content = directInvokeComponent.getContent();
-            content.setMaximumSize(new Dimension(-1, 400));
-            content.setPreferredSize(new Dimension(-1, 250));
-//            content.setSize(new Dimension(-1, 500));
 
-            directInvokeRow = new JPanel();
-            directInvokeRow.setLayout(new BorderLayout());
-
-
-            directInvokeRow.add(content, BorderLayout.CENTER);
-            directInvokeRow.add(createDateAndTimePanel(createTimeLineComponent(),
-                    Date.from(Instant.now())), BorderLayout.EAST);
-            makeSpace(0);
-            itemPanel.add(directInvokeRow, createGBCForLeftMainComponent(), 0);
-        }
-        try {
-            directInvokeComponent.renderForMethod(method, null);
-        } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
-        }
-
-        historyStreamScrollPanel.revalidate();
-        historyStreamScrollPanel.repaint();
-    }
-
-    void makeSpace(int position) {
-        Component[] components = itemPanel.getComponents();
-        for (Component component : components) {
-            if (component == directInvokeRow) {
-                continue;
-            }
-            GridBagConstraints gbc = ((GridBagLayout) itemPanel.getLayout()).getConstraints(component);
-            if (gbc.gridy < position) {
-                continue;
-            }
-            gbc.gridy += 1;
-            itemPanel.add(component, gbc);
-        }
-    }
-
-    public void removeDirectInvoke() {
-        itemPanel.remove(directInvokeRow);
-        directInvokeRow = null;
-        directInvokeComponent = null;
-        itemPanel.revalidate();
-        itemPanel.repaint();
-        historyStreamScrollPanel.revalidate();
-        historyStreamScrollPanel.repaint();
-
-    }
-
-    public void setConnectedAndWaiting() {
+    private void setConnectedAndWaiting() {
         if (!welcomePanelRemoved) {
-            welcomePanel.setVisible(false);
             historyStreamScrollPanel.setVisible(true);
             welcomePanelRemoved = true;
         }
 
-        JLabel process_started = new JLabel("Process started");
-        process_started.setIcon(UIUtils.LINK);
+        JLabel process_started = new JLabel("<html><font color='#548AF7'><b> Process started... </b></font></html>");
+//        process_started.setIcon(UIUtils.LIBRARY_ICON);
         JPanel startedPanel = new JPanel();
         startedPanel.setLayout(new BorderLayout());
         process_started.setBorder(
-                BorderFactory.createCompoundBorder(
-                        BorderFactory.createLineBorder(new JBColor(
-                                new Color(35, 103, 30),
-                                new Color(35, 103, 30)), 2, true),
-                        BorderFactory.createEmptyBorder(6, 6, 6, 6)
-                )
+                BorderFactory.createEmptyBorder(6, 6, 6, 6)
         );
-        startedPanel.add(process_started, BorderLayout.EAST);
+//        process_started.setForeground(new Color(84, 138, 247));
+//        startedPanel.add(process_started, BorderLayout.EAST);
 
         JPanel rowPanel = new JPanel();
         rowPanel.setLayout(new BorderLayout());
@@ -1159,35 +1337,36 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
 
         rowPanel.add(startedPanel, BorderLayout.CENTER);
         rowPanel.add(createLinePanel(createLineComponent()), BorderLayout.EAST);
-        makeSpace(0);
+//        makeSpace(0);
         rowPanel.setBorder(BorderFactory.createEmptyBorder(0, 0, 10, 0));
         itemPanel.add(rowPanel, createGBCForProcessStartedComponent());
-        if (directInvokeComponent != null) {
 
-            JPanel anotherRowPanel = new JPanel();
-            anotherRowPanel.setLayout(new BorderLayout());
+        setConnected();
+    }
 
-
-            anotherRowPanel.add(directInvokeComponent.getContent(), BorderLayout.CENTER);
-            anotherRowPanel.add(createDateAndTimePanel(createTimeLineComponent(),
-                    Date.from(Instant.now())), BorderLayout.EAST);
-
-
-            makeSpace(0);
-            itemPanel.add(anotherRowPanel, createGBCForLeftMainComponent(), 0);
-        }
+    private void setConnected() {
+        logger.warn("setConnected: " + stompStatusComponent.hashCode());
         stompStatusComponent.setConnected();
     }
 
-    public void loadNewCandidates() {
-        try {
-            insidiousService.getSessionInstance().getTopLevelTestCandidates(this, lastEventId);
-        } catch (SQLException e) {
-            // failed to load candidates hmm
-            e.printStackTrace();
-            throw new RuntimeException(e);
+    public synchronized void loadNewCandidates() {
+        if (sessionInstance == null) {
+            return;
         }
+        ApplicationManager.getApplication().executeOnPooledThread(() -> {
+            if (sessionInstance.isConnected() && sessionInstance.isScanEnable()) {
+                setConnected();
+            } else {
+                disconnected();
+            }
+        });
 
+        countByMethodName.clear();
+        ApplicationManager.getApplication().executeOnPooledThread(() -> {
+            candidateQueryLatch = new AtomicInteger(1);
+            sessionInstance
+                    .getTestCandidates(this, lastEventId, stompFilterModel, candidateQueryLatch);
+        });
     }
 
     public SessionScanEventListener getScanEventListener() {
@@ -1195,29 +1374,186 @@ public class StompComponent implements Consumer<TestCandidateMetadata>, TestCand
     }
 
     @Override
-    public void onClose(MethodDirectInvokeComponent methodDirectInvokeComponent) {
-        removeDirectInvoke();
-
+    public void onClose() {
     }
 
     @Override
-    public void onExpand(AFewCallsLater aFewCallsLater) {
-        List<MethodCallExpression> calls = insidiousService.getMethodCallsBetween(
-                aFewCallsLater.getGapStartIndex(),
-                aFewCallsLater.getGapEndIndex());
+    public void run() {
+        try {
+//            while (true) {
+            final TestCandidateBareBone testCandidateMetadata = incomingQueue.poll(1000, TimeUnit.MILLISECONDS);
+            if (testCandidateMetadata == null) {
+                return;
+            }
+            CountDownLatch pollerCDL = new CountDownLatch(1);
+            ApplicationManager.getApplication().invokeLater(() -> {
+                try {
 
-        Container parent = aFewCallsLater.getComponent().getParent();
-        GridBagConstraints gbc = ((GridBagLayout) itemPanel.getLayout()).getConstraints(parent);
-        int position = gbc.gridy;
+                    List<TestCandidateBareBone> remainingItems = new ArrayList<>();
+                    remainingItems.add(testCandidateMetadata);
+                    incomingQueue.drainTo(remainingItems);
+                    while (remainingItems.size() > MAX_ITEM_TO_DISPLAY) {
+                        remainingItems.remove(0);
+                    }
+
+                    for (TestCandidateBareBone remainingItem : remainingItems) {
+                        acceptSingle(remainingItem);
+                    }
+                    while (stompItems.size() > MAX_ITEM_TO_DISPLAY) {
+                        StompItem first = stompItems.remove(0);
+                        itemPanel.remove(first.getStompRowItem());
+                    }
+                    itemPanel.revalidate();
+                    itemPanel.repaint();
+                    insidiousService.forceRedrawInlayHints();
 
 
-        for (com.insidious.plugin.pojo.MethodCallExpression call : calls) {
-            TestCandidateMetadata testCandidateMetadata = new TestCandidateMetadata();
-            testCandidateMetadata.setMainMethod(call);
-            testCandidateMetadata.setTestSubject(call.getSubject());
-            addCandidateToUi(testCandidateMetadata, position);
+                } catch (Throwable t) {
+                    t.printStackTrace();
+                } finally {
+                    pollerCDL.countDown();
+                }
+            });
+
+            pollerCDL.await();
+//            }
+
+
+        } catch (Exception e) {
+            // who killed this
+//            e.printStackTrace();
+            // just end
+        } finally {
         }
-        itemPanel.remove(parent);
 
     }
+
+    private void acceptSingle(TestCandidateBareBone testCandidateMetadata) {
+//        logger.warn("entr acceptSingle: " + testCandidateMetadata);
+        String className = testCandidateMetadata.getMethodUnderTest().getClassName();
+        String methodName = testCandidateMetadata.getMethodUnderTest().getName();
+        String key = className + "." + methodName;
+        AtomicInteger countAtomic = countByMethodName.get(key);
+        if (countAtomic == null) {
+            countAtomic = new AtomicInteger(0);
+            countByMethodName.put(key, countAtomic);
+        }
+
+        int count = countAtomic.incrementAndGet();
+        if (count > 40) {
+            if (!stompFilterModel.getIncludedClassNames().contains(className) ||
+                    !stompFilterModel.getIncludedMethodNames().contains(methodName)) {
+                stompFilterModel.getExcludedMethodNames().add(methodName);
+                stompFilterModel.getExcludedClassNames().add(className);
+                InsidiousNotification.notifyMessage("Excluded [" + key + "] from live view. If you want to see them " +
+                                "include the class [" + className + "] and method [" + methodName + "] in filters.",
+                        NotificationType.INFORMATION);
+                updateFilterLabel();
+                return;
+
+            }
+        }
+
+        if (testCandidateMetadata.getExitProbeIndex() > lastEventId) {
+            lastEventId = testCandidateMetadata.getExitProbeIndex();
+        }
+        addCandidateToUi(testCandidateMetadata, itemPanel.getComponentCount());
+        itemPanel.revalidate();
+        scrollContainer.revalidate();
+        scrollContainer.repaint();
+//        logger.warn("exit acceptSingle: " + testCandidateMetadata);
+
+    }
+
+    public void setSession(SessionInstanceInterface sessionInstance) {
+        if (candidateQueryLatch != null) {
+            candidateQueryLatch.decrementAndGet();
+        }
+        this.sessionInstance = sessionInstance;
+        if (sessionInstance != null) {
+            sessionInstance.addSessionScanEventListener(getScanEventListener());
+        }
+        resetAndReload();
+    }
+
+    public void onMethodFocussed(MethodAdapter method) {
+        if (method == null) {
+            lastMethodFocussed = null;
+            return;
+        }
+//        ClassAdapter containingClass = method.getContainingClass();
+//        List<String> newClassNameList = new ArrayList<>();
+//        newClassNameList.add(containingClass.getQualifiedName());
+//        for (ClassAdapter aSuper : containingClass.getSupers()) {
+//            newClassNameList.add(aSuper.getQualifiedName());
+//        }
+
+
+//        Collection<PsiClass> childClasses = ClassInheritorsSearch.search(
+//                ApplicationManager.getApplication().runReadAction(
+//                        (Computable<PsiClass>) () -> method.getPsiMethod().getContainingClass())).findAll();
+//
+//        for (PsiClass childClass : childClasses) {
+//            ApplicationManager.getApplication().runReadAction(
+//                    (Computable<String>) () -> {
+//                        String name = childClass.getQualifiedName();
+//                        newClassNameList.add(name);
+//                        for (PsiClass anInterface : childClass.getInterfaces()) {
+//                            newClassNameList.add(anInterface.getQualifiedName());
+//                        }
+//                        return name;
+//                    });
+//        }
+
+
+        MethodUnderTest newMethodAdapter = ApplicationManager.getApplication().runReadAction(
+                (Computable<MethodUnderTest>) () -> MethodUnderTest.fromMethodAdapter(method));
+        if (lastMethodFocussed != null) {
+            if (lastMethodFocussed.getMethodHashKey().equals(newMethodAdapter.getMethodHashKey())) {
+                // same method focussed again
+                return;
+            }
+        }
+
+        lastMethodFocussed = newMethodAdapter;
+    }
+
+    public void dispose() {
+        if (candidateQueryLatch != null) {
+            candidateQueryLatch.decrementAndGet();
+        }
+    }
+
+    public synchronized void showVersionBadge(SemanticVersion currentVersion, SemanticVersion requiredVersion) {
+        if (hasShownVersionWarning) {
+            return;
+        }
+        hasShownVersionWarning = true;
+        Notification notification = new Notification(InsidiousNotification.DISPLAY_ID, "Update unlogged-sdk Version",
+                "You are using version " + currentVersion.toString() + " which is older than recommended version for" +
+                        " this plugin " + requiredVersion + ". Please update the unlogged-sdk version in your pom" +
+                        ".xml/build.gradle",
+                NotificationType.WARNING);
+        notification.setImportant(true);
+        notification.setSubtitle("Use unlogged-sdk:" + requiredVersion.toString());
+        notification.setIcon(UIUtils.UNLOGGED_ICON_DARK_SVG);
+        Notifications.Bus.notify(notification);
+    }
+
+
+    public void createJunitFromSelectedReplay() {
+
+    }
+
+    public int selectVisibleCandidates() {
+        selectedCandidates.clear();
+        selectAll();
+
+        return selectedCandidates.size();
+    }
+
+    public List<TestCandidateBareBone> getSelectedCandidates() {
+        return selectedCandidates;
+    }
+
 }
